welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: not found: type int
var nbBiscuit:int = 0
              ^RunFour:5: error: not found: value then
	if (estSurBiscuit()) then nbBiscuit = nbBiscuit + 1;
                             ^